--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -13,6 +13,9 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.3.1",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
