🔧 chore(.gitignore): add .next directory to ignore list 🔧 chore(.prettierignore): add dist and coverage directories to ignore list 🔧 chore(.prettierrc): enable single quotes 🔧 chore(apps/site/.gitignore): add .next directory to ignore list 🔧 chore(apps/site/tsconfig.json): add extends property to base tsconfig 🔧 chore(jest.config.ts): import getJestProjects from @nx/jest 🔧 chore(jest.preset.js): import default from @nx/jest/preset 🔧 chore(nx.json): add generators for @nx/react application with babel 🔧 chore(package.json): add dependencies and devDependencies 🔧 chore(tsconfig.base.json): add base tsconfig file

--- a/nx.json
+++ b/nx.json
@@ -23,6 +23,19 @@
         "production",
         "^production"
       ]
+    },
+    "test": {
+      "inputs": [
+        "default",
+        "^production",
+        "{workspaceRoot}/jest.preset.js"
+      ]
+    },
+    "e2e": {
+      "inputs": [
+        "default",
+        "^production"
+      ]
     }
   },
   "namedInputs": {
@@ -31,8 +44,18 @@
       "sharedGlobals"
     ],
     "production": [
-      "default"
+      "default",
+      "!{projectRoot}/**/?(*.)+(spec|test).[jt]s?(x)?(.snap)",
+      "!{projectRoot}/tsconfig.spec.json",
+      "!{projectRoot}/jest.config.[jt]s"
     ],
     "sharedGlobals": []
+  },
+  "generators": {
+    "@nx/react": {
+      "application": {
+        "babel": true
+      }
+    }
   }
 }
