--- a/apps/site/tsconfig.json
+++ b/apps/site/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../../tsconfig.base",
   "compilerOptions": {
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
@@ -20,7 +21,7 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./apps/site/src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
