🚀 feat: add new files and configurations for database library and server components
🔧 chore(nx.json): update targetDefaults for lint to include eslint config files
🔧 chore(nx.json): update namedInputs for production to exclude eslint config files
🚀 chore(package.json): add prisma and swc dependencies
🔧 chore(package.json): add eslint and typescript eslint dependencies
🔧 chore(package.json): add eslint plugins and configs
🔧 chore(tsconfig.base.json): add paths for database and database server modules

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@pm/database": ["libs/database/src/index.ts"],
+      "@pm/database/server": ["libs/database/src/server.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
