--- a/package.json
+++ b/package.json
@@ -1,52 +1,22 @@
 {
-  "name": "@mk/source",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {},
   "private": true,
-  "dependencies": {
-    "@nx/next": "^16.2.2",
-    "@prisma/client": "4.15.0",
-    "@swc/helpers": "~0.5.0",
-    "next": "13.4.1",
-    "prisma": "^4.15.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tslib": "^2.3.0"
+  "scripts": {
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "lint": "turbo run lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "@nx/cypress": "16.2.2",
-    "@nx/eslint-plugin": "16.2.2",
-    "@nx/jest": "16.2.2",
-    "@nx/js": "16.2.2",
-    "@nx/linter": "16.2.2",
-    "@nx/react": "16.2.2",
-    "@nx/workspace": "16.2.2",
-    "@swc/cli": "~0.1.62",
-    "@swc/core": "~1.3.51",
-    "@swc/jest": "0.2.20",
-    "@testing-library/react": "14.0.0",
-    "@types/jest": "^29.4.0",
-    "@types/node": "18.14.2",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
-    "cypress": "^12.11.0",
-    "eslint": "~8.15.0",
-    "eslint-config-next": "13.4.1",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
-    "nx": "16.2.2",
-    "nx-cloud": "latest",
-    "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
-    "typescript": "~5.0.2"
-  }
+    "@turbo/gen": "^1.9.7",
+    "eslint": "^7.32.0",
+    "eslint-config-custom": "*",
+    "prettier": "^2.5.1",
+    "turbo": "^1.9.7"
+  },
+  "name": "planmeet",
+  "packageManager": "yarn@1.22.19",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ]
 }
