--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@pm/auth": "*",
+    "@popperjs/core": "^2.11.8",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.4",
@@ -30,6 +31,7 @@
     "react-animate-height": "^3.1.1",
     "react-dom": "18.2.0",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-popper": "^2.3.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "zod": "^3.21.4"
