--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -13,13 +13,13 @@
     "generate-schemas": "prisma generate && prisma format"
   },
   "devDependencies": {
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
     "@prisma/client": "^4.13.0",
     "@prisma/generator-helper": "^4.13.0",
     "prisma": "^4.13.0",
-    "ts-node": "^10.9.1",
     "zod": "^3.20.2",
     "zod-prisma": "^0.5.4"
   },
