--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -27,6 +27,12 @@
     "@pm/auth": "*",
     "@popperjs/core": "^2.11.8",
     "@t3-oss/env-nextjs": "^0.3.1",
+    "@tanstack/react-query": "^4.29.12",
+    "@trpc/client": "^10.29.1",
+    "@trpc/next": "^10.29.1",
+    "@trpc/react": "^9.27.4",
+    "@trpc/react-query": "^10.29.1",
+    "@trpc/server": "^10.29.1",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "next": "^13.4.4",
