--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -6,10 +6,14 @@
   "types": "index.d.ts",
   "author": "durga@planmeet.ai",
   "private": true,
+  "files": [
+    "lib/**/*"
+  ],
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.15.0",
     "next-auth": "^4.22.1",
-    "@pm/database": "*"
+    "@pm/database": "*",
+    "@pm/lib": "*"
   }
 }
