--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -25,6 +25,8 @@
     "@turbo/gen": "^1.10.2",
     "superjson": "1.9.1",
     "turbo": "^1.10.2",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "@pm/ai": "*",
+    "@pm/database": "*"
   }
 }
