--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -17,7 +17,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.2.5",
     "autoprefixer": "10.4.14",
-    "eslint": "8.41.0",
+    "eslint": "^8.42.0",
     "eslint-config-next": "13.4.4",
     "postcss": "8.4.24",
     "prettier-plugin-tailwindcss": "^0.3.0",
@@ -44,6 +44,7 @@
     "react-quill": "^2.0.0",
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "@tippyjs/react": "^4.2.6"
   }
 }
