--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@pm/auth": "*",
+    "@pm/styles": "*",
     "@popperjs/core": "^2.11.8",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.12",
